--- a/Mermaids/bundleconfig.json
+++ b/Mermaids/bundleconfig.json
@@ -22,9 +22,7 @@
       "Scripts/game/lib/ImageBox.js",
       "Scripts/game/lib/BoundedPoint.js",
       "Scripts/game/Swimmer.js",
-      "Scripts/game/TimeCooker2.js",
-      "Scripts/game/Engine2.js",
-      "Scripts/game/game2.js"
+      "Scripts/game/Game.js"
     ]
   }
 ]
